config/cilium/cnp-allow-dns.yaml
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: allow-dns
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
