config/cilium/cnp-egress-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-world
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - world
