config/cilium/cnp-ingress-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backend-ingress
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - world
